@@ -1,4 +1,4 @@
-Copyright (c) 2005 Jamis Buck
+Copyright (c) 2005,2006 Jamis Buck
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
